cluster/apps/media-server/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: media-server
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app: jellyfin
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: linuxserver/jellyfin:10.11.11
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8096
            - name: svc-discovery
              containerPort: 7359
              protocol: UDP
            - name: cli-discover
              containerPort: 1900
              protocol: UDP
          resources:
            requests:
              cpu: "1500m"
              memory: "1.5Gi"
            limits:
              memory: "1.5Gi"
          volumeMounts:
            - name: jellyfin-config
              mountPath: /config
            - name: data
              mountPath: /data
            - name: dri
              mountPath: /dev/dri
          securityContext:
            privileged: true
      volumes:
        - name: jellyfin-config
          persistentVolumeClaim:
            claimName: jellyfin-config-pvc
        - name: data
          persistentVolumeClaim:
            claimName: media-data-pvc
        - name: dri
          hostPath:
            path: /dev/dri
