cluster/apps/media-server/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: media-server
spec:
  ports:
    - name: http
      port: 8096
      targetPort: 8096
    - name: svc-discovery
      port: 7359
      protocol: UDP
      targetPort: 7359
